syntax = "proto3";
package apigateway.conf;

option go_package = "github.com/yangchnet/skeleton/internal/api-gateway/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Token token = 2;
  Log log = 3;
}

message Server {
  message HTTP {
    string host = 3;
    int64 port = 4;
    google.protobuf.Duration timeout = 5;
  }
  HTTP http = 2;
}

message Token { string secret = 1; }

message Log {
  int32 level = 1;
  string formatter = 2;
  bool disable_caller = 3;
  bool disable_color = 4;
  bool enable_abs_path = 5;
  bool enable_func = 6;
  bool ignore_basic_fields = 7;
}